Add new metadata, enrollment new fields, offboardPendingRequest
